fix: style overlapping banner

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,7 +30,7 @@ body {
         background-size: contain;
         background-repeat: no-repeat;
         width: 100%;
-        height: 1059px;
+        height: 115vh;
 
         .logo-wrap {
             padding-left: 5%;
@@ -48,10 +48,10 @@ body {
         padding-top: 5%;
         margin-left: 25%;
         width: 50%;
-        padding-bottom: 10%;
+        // padding-bottom: 10%;
 
         @media (max-width: 596px) {
-            padding-top: 30%;
+            // padding-top: 30%;
             width: 100%;
             margin: 0%;
         }
@@ -173,49 +173,49 @@ body {
 
 @media (min-width: 601px) and (max-width: 1024px) {
     .home-wrap .main-banner {
-        height: 600px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1025px) and (max-width: 1200px) {
     .home-wrap .main-banner {
-        height: 650px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1201px) and (max-width: 1300px) {
     .home-wrap .main-banner {
-        height: 700px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1300px) and (max-width: 1350px) {
     .home-wrap .main-banner {
-        height: 740px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1351px) and (max-width: 1500px) {
     .home-wrap .main-banner {
-        height: 800px ;
+       min-height: 100vh ;
     }
 }
 @media (min-width: 1501px) and (max-width: 1650px) {
     .home-wrap .main-banner {
-        height: 900px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1651px) and (max-width: 1750px) {
     .home-wrap .main-banner {
-        height: 950px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1751px) and (max-width: 1920px) {
     .home-wrap .main-banner {
         background-size: cover;
-        height: 990px ;
+        min-height: 100vh ;
     }
 }
 @media (min-width: 1921px) {
     .home-wrap .main-banner {
         background-size: cover;
-        height: 1100px ;
+        min-height: 1100px ;
     }
 }
 .primary-button {
